# Laplace-Solver-Supercomputer

./: README.md  Supercomputer Setup.docx  run_all.sh
Presentation/: Project Presentation.pptx
Report/: Project Report.docx
part1/: cluster_map.sh  cluster_visualize.py
part2/: CMakeLists.txt
part2/src/: benchmark.py  laplace_mpi.cpp  laplace_omp.cpp  laplace_serial.cpp  verify_correctness.py
